# skeleton

./: CMakeLists.txt  build.sh
include/: TestManager.hpp
include/group/: TestGroup.hpp  TestGroupFactory.hpp
include/socket/: Buffer.h  Buffer.hpp  IClientSocket.h  IServerSocket.h  ISocket.h  ISocketListener.h  SocketAddress.h  SocketConfigurable.h  SocketType.h  TCPSocketClient.h  TCPSocketClientImpl.h  TCPSocketServerImpl.h  UDPSocket.h  UDPSocketClient.h  UDPSocketClientImpl.h  UDPSocketServer.h  UDPSocketServerImpl.h
include/test/: BaseTest.hpp  ITest.hpp  Testable.hpp
include/test/simple/: SimpleTestA.hpp  SimpleTestB.hpp
src/: TestManager.cpp  main.cpp  main_tcpclient.cpp  main_tcpserver.cpp  main_udpclient.cpp  main_udpclient_legacy.cpp  main_udpserver.cpp  main_udpserver_legacy.cpp
src/group/: TestGroup.cpp  TestGroupFactory.cpp
src/socket/: Buffer.cpp  SocketAddress.cpp  TCPSocketClient.cpp  TCPSocketClientImpl.cpp  UDPSocket.cpp  UDPSocketClient.cpp  UDPSocketClientImpl.cpp  UDPSocketServer.cpp  UDPSocketServerImpl.cpp
src/test/: BaseTest.cpp
src/test/simple/: SimpleTestA.cpp  SimpleTestB.cpp
